2008-02-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSView.m (-_viewWillMoveToWindow:,
	-_viewWillMoveToSuperview:): New methods with code from 
	viewWillMoveToWindow: and viewWillMoveToSuperview:. The later are
	now empty to allow subclasses not to call the super implementation.
	* Source/NSWindow.m:
	Use these new methods in place of the old ones.
	
2008-02-08 Fred Kiefer <FredKiefer@gmx.de>

	* Images/LogoGNUstep.tiff: New files
	* Images/GNUmakefile: Install new files.
	* Source/GSInfoPanel.m (-initWithDictionary:): Add background
	logo. Old patch by Nicolas Roard <nicolas@roard.com>
	* Source/NSBitmapImageRep.m : Flag all created bitmaps as having
	or not having pre-muliplied alpha.
	* Source/NSBitmapImageRep.m (-setColor:atX:y:, -colorAtX:y:,
	-setPixel:atX:y:, -getPixel:atX:y:): Correct to handle most
	formats correctly. 
	* Source/NSBitmapImageRep.m (-_premultiply, _unpremultiply): New
	helper methods.
	* Source/NSBitmapImage+PNG.m: Mark PNG images as not using
	pre-muliplied alpha.
	
2008-02-07 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSMenu.h,
	* Source/NSMenu.m (-_owningPopUp): New helper method.
	* Source/NSMenuView.m
	(-setWindowFrameForAttachingToRect:...popUpSelectedItem:):
	Special case for popups that don't use an item from the list.
	* Source/NSPopUpButtonCell.m (-setUsesItemFromMenu:): Create a
	menu item for the title.
	* Source/NSPopUpButtonCell.m (-setTitel:): Use the menu item, when
	not using an item from the menu.
	Reworked patch by Matt Rice <ratmice@gmail.com>. 
	
2008-02-04 Fred Kiefer <FredKiefer@gmx.de>

	* Images/common_3DArrowLeft.tiff,
	* Images/common_3DArrowUp.tiff: New files
	* Images/GNUmakefile: Install new files.
	* Source/NSMenuView.m
	(-setWindowFrameForAttachingToRect:...popUpSelectedItem:):
	Implement preferred edge handling.
	* Source/NSPopUpButtonCell.m: Rewrote handling of preferred edge,
	arrow possition and pull down flag.

2008-02-04 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSHorizontalTypesetter.m