@@ -1,3 +1,8 @@
+2008-02-12 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/NSFont.m (-initWithName:matrix:fix:screenFont:role:): Add
+	fallback for more missing standard fonts (LucidaGrande).
+
 2008-02-11 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/NSView.m (-_viewWillMoveToWindow:,
